--- a/web/app/sass/app.scss
+++ b/web/app/sass/app.scss
@@ -6,6 +6,8 @@
 @import "~materialize-css/sass/components/color-variables";
 @import "~materialize-css/sass/components/color-classes";
 
+$primary-color: color("purple", "darken-4") !global;
+
 // Variables;
 @import "~materialize-css/sass/components/variables";
 
